--- a/views/index.pug
+++ b/views/index.pug
@@ -33,7 +33,7 @@ html(lang='en')
         // input area
         div.input-form
           // input field
-          input#upper-pressure-input-field(type='text', name='upper-pressure', placeholder='Unesi gornji tlak', required='')
+          input#upper-pressure-input-field(type='text', name='upper-pressure', placeholder='Unesi gornji tlak', required='', select='')
           // input submit button
           input#submit-upper-pressure(type='submit', value='Spremi')
         // submit input data
@@ -54,4 +54,3 @@ html(lang='en')
         // submit input data
         div.submit-multiple-inputs-close.hidden
           input#submit-multiple-inputs-close-id(type='submit', value='Pohrani unesena mjerenja')
-  script(src='./scripts/onclick.js')
