--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -1,6 +1,12 @@
 /*imported font*/
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,400,400i,700');
 /*general styling*/
+@import "./title.css";
+@import "./activation_styles.css";
+@import "./colors.css";
+@import "./navigation_bar.css";
+@import "./values.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -18,37 +24,6 @@ html, body {
   background-position: center;
   height: 100vh;
 }
-/*main title*/
-.header-title-box {
-    position: relative;
-    height: 14%;
-    width: 76%;
-    top: 30px;
-    left: 12%;
-    display: flex;
-    flex-wrap: nowrap;
-}
-.logo {
-    height: 100%;
-    flex: 1;
-    margin: 0;
-}
-.logo img {
-    height: 100%;
-}
-.main-title-text {
-    background-image: linear-gradient(rgba(229, 57, 53, 0.8), rgba(106, 27, 154, 0.8));
-    border-radius: 100px;
-    text-transform: uppercase;
-    height: auto;
-    flex: 0 1 88%;
-    margin: 0 auto;
-    font-size: 300%;
-    border: 2px solid red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 h1 {
     font-size: 200%;
     text-align: center;
@@ -59,159 +34,4 @@ nav {
   position: relative;
   transition: top 1s;
   text-align: center;
-}
-.nonactive-nav {
-  top: 200px;
-}
-.active-nav {
-  top: 80px;
-}
-/*navigation style*/
-.options-to-choose {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.options-to-choose a:link,
-.options-to-choose a:visited {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100%;
-  border-radius: 100px;
-  padding: 10px 30px;
-  border: 3px solid #512DA8;
-  background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
-  color: #fff;
-  font-size: 115%;
-  text-decoration: none;
-  transition: color 0.2s, border 0.2s;
-}
-.options-to-choose a:hover,
-.options-to-choose a:active {
-  color: #ddd;
-  height: 100%;
-  background-image: linear-gradient(rgba(26, 35, 126, 1), rgba(106, 27, 154, 1));
-  border: 3px solid #673AB7;
-}
-/*blood measurement input form style*/
-.new-measurings {
-  position: relative;
-  top: 100px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 60%;
-  left: 20%;
-  height: 140px;
-  transition: opacity 5s;
-}
-.visible {
-  visibility: visible;
-  opacity: 1;  
-}
-.hidden {
-  visibility: hidden;
-  opacity: 0;  
-}
-.blood-pressure-input {
-  padding: 0;
-  margin: 0 15px;
-  border-radius: 20px;
-  height: 100%;
-  width: 44%;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid black;
-  background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
-  box-shadow: 5px 5px 3px;
-}
-.blood-pressure-title {
-  flex: 0 1 45px;
-  min-height: 45px;
-  padding: 10px 10px 0 10px;
-  display: flex;
-}
-.device-screen {
-  flex: 0 1 40px;
-}
-.device-screen h3 {
-  text-align: right;
-  padding-right: 5px;
-  height: 50%;
-  line-height: 155%;
-  font-weight: 400;
-  font-size: 65%;
-}
-.red {
-  background-color: rgba(229, 57, 53, 1);
-  border-top-left-radius: 100px;
-  color: #fff;
-}
-.red-transparent {
-  background-color: rgba(229, 57, 53, 0.15);
-  border-top-left-radius: 100px;
-  color: #aaa;
-}
-.blue {
-  background-color: rgba(26, 35, 126, 1);
-  border-bottom-left-radius: 100px;
-  color: #fff;
-}
-.blue-transparent {
-  background-color: rgba(26, 35, 126, 0.3);
-  border-bottom-left-radius: 100px;
-  color: #aaa;
-}
-.blood-pressure-title h2 {
-  flex: 1;
-  flex-wrap: nowrap;
-  padding-left: 10px;
-  font-size: 130%;
-  color: #fff;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  border-top-right-radius: 100px;
-  border-bottom-right-radius: 100px;
-  background-image: linear-gradient(rgba(26, 35, 126, 1), rgba(106, 27, 154, 1));
-  line-height: 160%;
-}
-/*blood pressure input brackets*/
-.input-form {
-  width: 100%;
-  padding: 0 10px;
-  flex: 0 1 auto;
-  min-height: 85px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-input {
- text-align: center;
- font-size: 75%;
- height: 32px;
-}
-input[type=submit] {
-  border-radius: 5px;
-  padding: 4px 10px;
-}
-#upper-pressure-input-field,
-#lower-pressure-input-field {
- border-radius: 10px;
- padding: 4px 5px;
- margin: 7px auto;
-}
-.submit-multiple-inputs-next,
-.submit-multiple-inputs-close {
-  width: 100%;
-  flex: 1;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 0 10px 10px 10px;
-  border-top: 2px solid black;
-}
-#submit-multiple-inputs-next-id,
-#submit-multiple-inputs-close-id {
-  background-color: #b5a6ab;
-  align-self: flex-end;
 }
