--- a/views/index.pug
+++ b/views/index.pug
@@ -13,10 +13,13 @@ html(lang='en')
         img(src='https://www.welchallyn.com/content/dam/welchallyn/images/Product-Images/Cardiopulmonary/Ambulatory-Blood-Pressure-Monitor/ABPM%207100/PWA_icon.png', alt='Heart-rate_logo')
       h1.main-title-text Dijagram mjerenja tlaka
     // navigation toolbar
-    nav(class=nav_class)
-      .options-to-choose
-        a#new-measure(href='/input_new_measuring') Unesi novo mjerenje
-        a#new-multiple-measures(href='#') Unesi niz novih mjerenja
+    nav(class=nav_class_input)
+      div.options-to-choose
+        a#new-measure(href='/input_new_value') Unesi novo mjerenje
+        a#new-multiple-values(href='/input_multiple_values') Unesi niz novih mjerenja
+    nav(class=nav_class_show)
+      div.options-to-choose
+        a#average(href='/average') Prosjecne vrijednosti
         a#graphics(href='#') Graficki prikaz zadnjih mjerenja
     // new measurments box
     div.new-measurings(class=new_measuring_visibility)
@@ -34,9 +37,6 @@ html(lang='en')
         form#input-form
           // input field
           input#upper-pressure-input-field(type='text', name='upper-pressure', placeholder='Unesi gornji tlak', required='', autofocus='')
-        // submit input data
-        div.submit-multiple-inputs-next.hidden
-          input#submit-multiple-inputs-next-id(type='submit', value='Unesi sljedece mjerenje')
       // blood lower pressure input form
       div.blood-pressure-input
         // title description
@@ -48,6 +48,9 @@ html(lang='en')
         // textarea
         form(form='input-form')
           input#lower-pressure-input-field(type='text', name='lower-pressure', placeholder='Unesi donji tlak', required='')
-        // submit input data
-        div.submit-multiple-inputs-close.hidden
-          input#submit-multiple-inputs-close-id(type='submit', value='Pohrani unesena mjerenja')
+      // submit input data
+      div.submit-inputs
+        div
+          input#submit-multiple-inputs-close-id(type='submit', value='Pohrani unesena mjerenja', href="/")
+        div(class=submit_multi_visibility)
+          input#submit-multiple-inputs-close-id(type='submit', value='Pohrani unesena mjerenja' href="/")
