--- a/views/assets/css/navigation_bar.css
+++ b/views/assets/css/navigation_bar.css
@@ -2,31 +2,37 @@
 nav {
   position: relative;
   transition: top 1s;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 .options-to-choose {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .options-to-choose a:link,
-  .options-to-choose a:visited {
-    margin: 0 20px;
-    display: inline-block;
-    height: 100%;
-    border-radius: 100px;
-    padding: 10px 30px;
-    border: 3px solid #512DA8;
-    background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
-    color: #fff;
-    font-size: 115%;
-    text-decoration: none;
-    transition: color 0.2s, border 0.2s;
-  }
-  .options-to-choose a:hover,
-  .options-to-choose a:active {
-    color: #ddd;
-    height: 100%;
-    background-image: linear-gradient(rgba(26, 35, 126, 1), rgba(106, 27, 154, 1));
-    border: 3px solid #673AB7;
-  }
+  margin: auto;
+  display: inline-block;
+  box-sizing: content-box;
+  padding: 20px;
+  background-image: linear-gradient(rgba(229, 57, 53, 0.4), rgba(106, 27, 154, 0.4));
+  border-radius: 5% / 40%;
+  border: 1px solid #512DA8;
+  max-width: 100%;
+}
+.options-to-choose a:link,
+.options-to-choose a:visited {
+  margin: 0 20px;
+  display: inline-block;
+  height: 100%;
+  border-radius: 100px;
+  padding: 10px 30px;
+  border: 3px solid #512DA8;
+  background-image: linear-gradient(rgba(26, 35, 126, 0.3), rgba(106, 27, 154, 0.5));
+  color: #fff;
+  font-size: 115%;
+  text-decoration: none;
+  transition: color 0.2s, border 0.2s;
+}
+.options-to-choose a:hover,
+.options-to-choose a:active {
+  color: #ddd;
+  height: 100%;
+  background-image: linear-gradient(rgba(26, 35, 126, 1), rgba(106, 27, 154, 1));
+  border: 3px solid #673AB7;
+}
