single and multiple value input UI arranged
When singel input or multiple input button clicked one can appropriatelly choose if he/she would input one set of data or an array of sets of data

--- a/views/index.html
+++ b/views/index.html
@@ -60,39 +60,7 @@
   <nav>
     <div class="options-to-choose"><a id="average" href="/average">Prosjecne vrijednosti</a><a id="graphics"
         href="#">Graficki prikaz zadnjih mjerenja</a></div>
-  </nav><!-- new measurments box-->
-  <div class="new-measurings">
-    <!-- blood upper pressure input form-->
-    <div class="blood-pressure-input">
-      <!-- title description-->
-      <div class="blood-pressure-title">
-        <!-- blood pressure type-->
-        <div class="device-screen">
-          <h3 class="red">120</h3>
-          <h3 class="blue-transparent">80</h3>
-        </div><!-- 120/80 image rendering-->
-        <h2>Gornji tlak</h2>
-      </div>
-    </div><!-- textarea-->
-    <form>
-      <!-- input field--><input id="upper-pressure-input-field" type="text" form="submitInputs" name="upperValue"
-        placeholder="Unesi gornji tlak" required="" autofocus=""></form><!-- blood lower pressure input form-->
-    <div class="blood-pressure-input">
-      <!-- title description-->
-      <div class="blood-pressure-title">
-        <div class="device-screen">
-          <h3 class="red-transparent">120</h3>
-          <h3 class="blue">80</h3>
-        </div>
-        <h2>Donji tlak</h2>
-      </div><!-- textarea-->
-    </div>
-    <form><input id="lower-pressure-input-field" type="text" form="submitInputs" name="lowerValue"
-        placeholder="Unesi donji tlak" required=""></form><!-- submit input data-->
-    <form class="formFormat" id="submitInputs" action="/submit" method="post">
-      <div><input type="submit" value="Pohrani unesena mjerenja"></div>
-    </form>
-  </div>
+  </nav>
 </body>
 
 </html>
