--- a/views/index.pug
+++ b/views/index.pug
@@ -22,7 +22,7 @@ html(lang='en')
       div.options-to-choose
         a#average(href='/average') Prosjecne vrijednosti
         a#graphics(href='#') Graficki prikaz zadnjih mjerenja
-    include assets/pugs/includes.pug
+    block body
     //- // new measurments box
     //- div.new-measurings(class=new_measuring_visibility)
     //-   // blood upper pressure input form
