small changes done

--- a/views/index.pug
+++ b/views/index.pug
@@ -20,8 +20,8 @@ html(lang='en')
         a(href='/select_file') Unesi iz vanjske datoteke
     nav(class=nav_class_show)
       div.options-to-choose
-        a#average(href='/average') Prosjecne vrijednosti
-        a#graphics(href='#') Graficki prikaz zadnjih mjerenja
+        a(href='/average') Prosjecne vrijednosti
+        a(href='/last_inputs') Graficki prikaz zadnjih mjerenja
     block body
     //- // new measurments box
     //- div.new-measurings(class=new_measuring_visibility)
