--- a/views/assets/pugs/extend_output_last_ten_inputs.pug
+++ b/views/assets/pugs/extend_output_last_ten_inputs.pug
@@ -1,2 +1,14 @@
 extends ../../index.pug
 
+block body
+    .container
+    table.table
+        tr
+            th Datum
+            th Gornji tlak
+            th Donji tlak
+    tbody
+        tr
+            td 22.08.2019.
+            td 120
+            td 80
