--- a/views/assets/pugs/extend_output_last_ten_inputs.pug
+++ b/views/assets/pugs/extend_output_last_ten_inputs.pug
@@ -2,12 +2,13 @@ extends ../../index.pug
 
 block body
     .container
-        table.table
+        table
             tr
                 th Datum
                 th Gornji tlak
                 th Donji tlak
-        tbody
-            tr
-                each data in sortedData
-                    td #{data.id}
+            each data in sortData
+                tr
+                    td #{data.time}
+                    td #{data.upperValue}
+                    td #{data.lowerValue}
