--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -7,6 +7,7 @@
 @import "./navigation_bar.css";
 @import "./values.css";
 @import "./table.css";
+@import "./period_of_interest.css";
 
 * {
   margin: 0;
