--- a/views/assets/pugs/extend_output_last_ten_inputs.pug
+++ b/views/assets/pugs/extend_output_last_ten_inputs.pug
@@ -1,14 +1,18 @@
 extends ../../index.pug
 
 block body
-    .container
-        table
-            tr
-                th Datum
-                th Gornji tlak
-                th Donji tlak
-            each data in sortData
+    .render_inputs
+        block content
+        .table_container
+            .last_ten_values_render
+                h2 Zadnjih 10 mjerenja
+            table
                 tr
-                    td #{data.time}
-                    td #{data.upperValue}
-                    td #{data.lowerValue}
+                    th Datum
+                    th Gornji tlak
+                    th Donji tlak
+                each data in sortData
+                    tr
+                        td#left #{data.time}
+                        td #{data.upperValue}
+                        td#right #{data.lowerValue}
