--- a/views/index.pug
+++ b/views/index.pug
@@ -15,11 +15,16 @@ html(lang='en')
     // navigation toolbar
     nav(class=nav_class_input)
       div.options-to-choose
+        //open form to input single value; call extend_new_measurings
         a(href='/input_new_value') Unesi novo mjerenje
+        //open form to input multiple values and save an average of them in the database; call extend_multiple_new_measurings
         a(href='/input_multiple_values') Unesi niz novih mjerenja
+        //call /select_file to import data from outer text file
         a(href='/select_file') Unesi iz vanjske datoteke
     nav(class=nav_class_show)
       div.options-to-choose
-        a(href='/average') Prosjecne vrijednosti
+        //call period_of_interest web page layout to input period for which user wants to see input values
+        a(href='/period_of_interest') Prosjecne vrijednosti
+        //call last_inputs web page layout to show graphically inputs
         a(href='/last_inputs') Graficki prikaz zadnjih mjerenja
     block body
