Period input fields added

--- a/views/assets/pugs/average_values.pug
+++ b/views/assets/pugs/average_values.pug
@@ -1,5 +1,4 @@
-extends extend_output_last_ten_inputs.pug
+extends output_with_table.pug
 
-block content
-    .average_values
-        h2 Prosjek unesenih vrijednosti u periodu od ... do ... iznosi:
+block average
+    h2 Prosjek unesenih vrijednosti u periodu od #{begin} do #{end} iznosi:
