--- a/views/assets/pugs/period_of_interest.pug
+++ b/views/assets/pugs/period_of_interest.pug
@@ -3,6 +3,6 @@ extends ../../index.pug
 block body
     .input-field
         form(action='/average')
-            input(type='text', name='period_begin', placeholder='', required='', autofocus='')
-            input(type='text', name='period_end', placeholder='', required='')
+            input(type='date', name='period_begin', placeholder='', required='', autofocus='')
+            input(type='date', name='period_end', placeholder='', required='')
             input(type='submit', value='Potvrdi unos')
