input text file added

--- a/views/assets/pugs/average_values.pug
+++ b/views/assets/pugs/average_values.pug
@@ -1,4 +1,4 @@
 extends output_with_table.pug
 
 block average
-    h2 Prosjek unesenih vrijednosti u periodu od #{begin} do #{end} iznosi:
+    h2 Prosjecne vrijednosti tlaka u periodu od #{begin} do #{end}:
