--- a/views/assets/pugs/extend_new_measurings.pug
+++ b/views/assets/pugs/extend_new_measurings.pug
@@ -26,7 +26,7 @@ block body
                     h3.blue 80
                 h2 Donji tlak
             // textarea
-        form
+        form.lower-form
             input(type='text', form="submitInputs", name='lowerValue', placeholder='Unesi donji tlak', required='')
         // submit input data
         form.formFormat(id="submitInputs" action="/submit" method="post")
