--- a/views/assets/pugs/output_with_table.pug
+++ b/views/assets/pugs/output_with_table.pug
@@ -7,4 +7,4 @@ block body
         .graphics
             block graphics
         .table_container
-            include table_ten_inputs.pug
+            include table_last_few_inputs.pug
