--- a/views/assets/pugs/period_of_interest.pug
+++ b/views/assets/pugs/period_of_interest.pug
@@ -5,4 +5,5 @@ block body
         form(action='/average')
             input(type='date', name='period_begin', placeholder='', required='', autofocus='')
             input(type='date', name='period_end', placeholder='', required='')
+            input(type='text', name='number_to_show', placeholder='Unesite broj 1-10')
             input(type='submit', value='Potvrdi unos')
