--- a/views/assets/pugs/extend_new_measurings.pug
+++ b/views/assets/pugs/extend_new_measurings.pug
@@ -29,7 +29,7 @@ block body
         form.lower-form
             input(type='text', form="submitInputs", name='lowerValue', placeholder='Unesi donji tlak', required='')
         // submit input data
-        form.formFormat(id="submitInputs" action="/submit" method="post")
+        form.formFormat(id="submitInputs" action="/" method="post")
             div
                 input(type='submit', value='Pohrani unesena mjerenja')
             block content
