--- a/views/assets/pugs/select_file.pug
+++ b/views/assets/pugs/select_file.pug
@@ -5,5 +5,5 @@ block body
         form.select-file(action='/text_file_submit', method='post', enctype='multipart/form-data')
             h2 Oznacite tekstualnu datoteku iz koje zelite unijeti mjerenja
             label.label(for='fileupload', accept='text') Odaberite datoteku
-                input(type='file', name='fileupload', id='fileupload', onchange=handleFileSelect, required='')
+                input(type='file', name='fileupload', id='fileupload', required='')
                 input(type='submit' value='Potvrdi')
