--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -8,6 +8,7 @@
 @import "./values.css";
 @import "./table.css";
 @import "./input_frame.css";
+@import "./login.css";
 
 * {
   margin: 0;
@@ -53,6 +54,10 @@ input[type=text] {
  padding: 4px 5px;
 }
 input[type=date] {
+  border-radius: 10px;
+  padding: 4px 5px;
+ }
+ input[type=password] {
   border-radius: 10px;
   padding: 4px 5px;
  }
