--- a/views/assets/css/values.css
+++ b/views/assets/css/values.css
@@ -14,7 +14,7 @@
 }
 .blood-pressure-input {
   padding: 0;
-  margin: 0px 15px 0px 15px;
+  margin: 0px 15px 10px 15px;
   display: flex;
   flex-direction: column;
 }
@@ -52,8 +52,25 @@
   z-index: 0.1;
 }
 /*blood pressure input brackets*/
-.lower-form {
-  padding-bottom: 15px;
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+input {
+  text-align: center;
+  font-size: 75%;
+  height: 36px;
+  align-items: center;
+  margin: 7px auto;
+}
+input[type=submit] {
+  border-radius: 8px;
+  padding: 4px 10px;
+}
+input[type=text] {
+ border-radius: 10px;
+ padding: 4px 5px;
 }
 .formFormat {
   padding: 10px 0px;
