--- a/views/assets/pugs/login.pug
+++ b/views/assets/pugs/login.pug
@@ -4,8 +4,8 @@ block body
     .login_form
         form(action='/welcome')
             .current_user
-                input(type='text', name='username', placeholder='', required='', autofocus='')
-                input(type='password', name='password', placeholder='', required='')
+                input(type='text', name='username', value='', required='', autofocus='')
+                input(type='password', name='password', value='', minlength='8', pattern='([0-9]{1,}|[A-Z]{1,}|[a-z]{1,})', required='')
             .submit_new_user
                 input(type='submit', name='submit_user', value='Potvrdi')
                 input(type='submit', value='Unesi podatke o novom korisniku')
