--- a/views/assets/css/values.css
+++ b/views/assets/css/values.css
@@ -14,7 +14,7 @@
 }
 .blood-pressure-input {
   padding: 0;
-  margin: 0px 15px 10px 15px;
+  margin: 0px 15px 0px 15px;
   display: flex;
   flex-direction: column;
 }
@@ -64,13 +64,8 @@ input {
   align-items: center;
   margin: 7px auto;
 }
-input[type=submit] {
-  border-radius: 8px;
-  padding: 4px 10px;
-}
-input[type=text] {
- border-radius: 10px;
- padding: 4px 5px;
+.lower-form {
+  padding: 3px 10px 8px 10px;
 }
 .formFormat {
   padding: 10px 0px;
