Username validation added

--- a/views/assets/pugs/login.pug
+++ b/views/assets/pugs/login.pug
@@ -4,8 +4,8 @@ block body
     .login_form
         form(action='/welcome')
             .current_user
-                input(type='text', name='username', value='', required='', autofocus='')
-                input(type='password', name='password', value='', minlength='8', pattern='^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}$', required='')
+                input(type='text', name='username', value='', pattern='^(?=.*[a-zA-Z])(?=.*[a-z]).{6,15}$', required='', autofocus='')
+                input(type='password', name='password', value='', pattern='^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}$', required='')
             .submit_new_user
                 input(type='submit', name='submit_user', value='Potvrdi')
                 input(type='submit', value='Unesi podatke o novom korisniku')
