user password control logic added

--- a/views/assets/pugs/input_new_value.pug
+++ b/views/assets/pugs/input_new_value.pug
@@ -31,5 +31,5 @@ block body
         // submit input data
         form.formFormat(id="submitInputs" action="/welcome" method="post")
             div
-                input(type='submit', value='Pohrani unesena mjerenja')
+                input(type='submit', value='Pohrani uneseno mjerenje')
             block content
