--- a/views/assets/pugs/login.pug
+++ b/views/assets/pugs/login.pug
@@ -2,11 +2,13 @@ extends ../../index.pug
 
 block body
     .login_form
-        form(action='/welcome')
+        form(action='/' method='post')
             .current_user
                 input(type='text', name='username', value='', pattern='^(?=.*[a-zA-Z])(?=.*[a-z]).{6,15}$', required='', autofocus='')
                 input(type='password', name='password', value='', pattern='^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}$', required='')
             .submit_new_user
                 input(type='submit', name='submit_user', value='Potvrdi')
-                input(type='submit', value='Unesi podatke o novom korisniku')
+                input(type='submit', value='Unesi novog korisnika')
+            .user_not_found
+                body content
 
